# phase1-dry-run-eval

./: .gitattributes  .gitignore  .gitmodules  =0.8.4  README.md  pyproject.toml
cards/: contextual_drag.yaml  contextual_drag_error_conditioning.yaml  contextual_drag_mitigation.yaml  contextual_drag_recursive_filter1.yaml  contextual_drag_recursive_naive.yaml  contextual_drag_smoke.yaml  contextual_drag_ted.yaml  render_formal.py
cards/nodes/: _cond_cache.py  _dataset_registry.py  _init_cache.py  _recursive_init_sampling.py  _recursive_multirun.py  run_drag_1f.py  run_drag_experiment.py  run_ec_posthoc.py  run_error_conditioning.py  run_inference_eval.py  run_mitigation_experiment.py  run_recursive_filter1.py  run_recursive_naive.py  run_ted_experiment.py
data/full_data/24-game/: PROVENANCE.md
data/full_data/aime24/: PROVENANCE.md
data/full_data/aime25/: PROVENANCE.md
data/full_data/crux-i/: PROVENANCE.md
data/full_data/gpqa/: PROVENANCE.md
data/full_data/hmmt24/: PROVENANCE.md
data/full_data/hmmt25/: PROVENANCE.md
data/smoke/: MANIFEST.md
env/: environment-ica-new.yml  environment-ica.yml
evaluation_runs/06b51ef9_2026-05-22__23-52-16/: card.yaml  verdict.json
evaluation_runs/09737efb_2026-05-23__00-36-57/: card.yaml
evaluation_runs/2c50179e_2026-05-23__00-03-52/: card.yaml  verdict.json
evaluation_runs/3016791f_2026-05-22__23-57-37/: card.yaml  verdict.json
evaluation_runs/83dad01b_2026-05-23__00-07-11/: card.yaml
evaluation_runs/8da3a4a2_2026-05-23__00-25-09/: card.yaml  verdict.json
evaluation_runs/9aceb1ac_2026-05-23__00-07-42/: card.yaml
evaluation_runs/9aceb1ac_2026-05-23__00-14-35/: verdict.json
evaluation_runs/a3317ea0_2026-05-22__23-53-17/: card.yaml
evaluation_runs/b83d5f37_2026-05-23__00-00-13/: card.yaml  verdict.json
evaluation_runs/c434e221_2026-05-22__23-48-06/: card.yaml
evaluation_runs/e351acb6_2026-05-23__00-01-56/: card.yaml
prompt_templates/: 1f_templates.json  2f_templates.json  ablation_templates.json  context_manipulation_templates.json  init_response_prompt_templates.json  prompted_error_signal_templates.json  recursive_templates.json
scripts/: install.sh  run_eval.sh  viz_gpt_oss_20b.py
src/contextual_drag/: __init__.py  __main__.py  cli.py
src/contextual_drag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
submodules/aiq-magnet/: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  predict_inputs_exploration.ipynb  pyproject.toml  requirements.lock.txt  run_tests.py
submodules/aiq-magnet/.devcontainer/: Dockerfile  compose.yml  devcontainer.json
submodules/aiq-magnet/.devcontainer/scripts/: post-create.sh
submodules/aiq-magnet/.github/workflows/: release.yml  tests.yml
submodules/aiq-magnet/dev/benchmark/: benchmark_loaders.py
submodules/aiq-magnet/dev/maintain/: README.md  update_xcookie.sh
submodules/aiq-magnet/dev/oneoff/: check_results_overlap.py
submodules/aiq-magnet/dev/poc/: inspect_historic_helm_runs.py  prepare_heim_results.py
submodules/aiq-magnet/dockerfiles/: README.md  magnet-heim.build_and_publish.sh  magnet-heim.dockerfile  magnet.build_and_publish.sh  magnet.dockerfile  uv.build_and_publish.sh  uv.dockerfile
submodules/aiq-magnet/docs/source/: conf.py  index.rst
submodules/aiq-magnet/docs/source/auto/: magnet.__main__.rst  magnet.backends.helm.download_helm_results.rst  magnet.backends.helm.magnet_run_helm.rst  magnet.backends.helm.rst  magnet.backends.helm.run_specs.magnet_run_specs.rst  magnet.backends.helm.run_specs.rst  magnet.backends.helm.scenarios.local_dataset_scenario.rst  magnet.backends.helm.scenarios.rst  magnet.backends.rst  magnet.cards.rst  magnet.cli.download_cli.rst  magnet.cli.main.rst  magnet.cli.rst  magnet.demo.helm_demodata.rst  magnet.demo.rst  magnet.evaluation.rst  magnet.example_perturbation_predictor.rst  magnet.example_random_predictor.rst  magnet.helm_inference.rst  magnet.helm_outputs.rst  magnet.perturb_instances.rst  magnet.predictor.rst  magnet.rst  magnet.utils.rst  magnet.utils.util_iterable.rst  magnet.utils.util_msgspec.rst  magnet.utils.util_pandas.rst  magnet.utils.util_stringalgo.rst  magnet.utils.util_tables.rst  modules.rst
submodules/aiq-magnet/docs/source/manual/: running_heim.rst
submodules/aiq-magnet/magnet/: __init__.py  __main__.py  data_splits.py  evaluation.py  example_perturbation_predictor.py  example_random_instance_predictor.py  example_random_predictor.py  helm_inference.py  instance_predictor.py  perturb_instances.py  predictor.py
submodules/aiq-magnet/magnet/backends/helm/: helm_outputs.py  helm_run_analysis.py  helm_run_diff.py  pipeline.py
submodules/aiq-magnet/magnet/backends/helm/cli/: download_helm_results.py  inspect_helm_models.py  materialize_helm_run.py
submodules/aiq-magnet/magnet/backends/helm/run_specs/: __init__.py  magnet_run_specs.py
submodules/aiq-magnet/magnet/backends/helm/scenarios/: __init__.py  local_dataset_scenario.py
submodules/aiq-magnet/magnet/backends/helm/util/: helm_hashers.py  helm_metrics.py  helm_summarize_mixin.py
submodules/aiq-magnet/magnet/cards/: llama.yaml  llama_kwdagger.yaml  llama_pipeline.yaml  simple.yaml
submodules/aiq-magnet/magnet/cli/: download_cli.py  main.py
submodules/aiq-magnet/magnet/demo/: __init__.py  helm_demodata.py
submodules/aiq-magnet/magnet/examples/llama_consistency/: claim.py  llama_predict.py  pipelines.py
submodules/aiq-magnet/magnet/utils/: __init__.py  lazy_loader_extensions.py  sankey.py  util_iterable.py  util_msgspec.py  util_pandas.py  util_stringalgo.py  util_tables.py
submodules/aiq-magnet/requirements/: runtime.txt
submodules/aiq-magnet/tests/: test_import.py  test_llama_cards.py
tests/: conftest.py  test_aggregate_empty.py  test_cards.py  test_cli.py  test_dataset_registry.py  test_init_cache.py  test_packaged_resources.py  test_prompt_budget.py  test_record_schema.py  test_recursive_card.py  test_recursive_cli.py  test_recursive_init_sampling.py  test_recursive_multirun.py  test_render_formal.py  test_resume.py  test_smoke.py
workflows/: test.yml
(+369 files in other folders)
