[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextual-drag"
version = "0.1.0"
description = "AIQ-magnet deliverable for the Contextual Drag research workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Contextual Drag Authors" }
]
dependencies = [
  "datasets>=2",
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2",
  "scriptconfig>=0.8.2",
  "sympy>=1.12",
  "tqdm>=4.66",
]

[project.optional-dependencies]
inference = [
  "accelerate>=1.0",
  "transformers>=4.45",
  "vllm>=0.10",
]
eval = [
  "math-verify>=0.8.0",
]
analysis = [
  "zss>=1.2.0",
  "python-Levenshtein>=0.27",
  "networkx>=3",
  "matplotlib>=3.8",
]
magnet = [
  "crfm-helm>=0.5.8",
  "dacite>=1.9.2",
  "fsspec>=2024.9",
  "h5py>=3.14",
  "kwarray>=0.7.1",
  "kwdagger>=0.2.3",
  "kwutil>=0.3.8",
  "lazy-loader>=0.4",
  "loguru>=0.7.3",
  "msgspec>=0.19",
  "numexpr>=2.11",
  "orjson>=3.10.15",
  "pygtrie>=2.5",
  "pyyaml>=6.0.2",
  "rich>=14.1",
  "ruamel-yaml>=0.17.22",
  "safer>=2024.1",
  "scikit-learn>=1.7.1",
  "typing-extensions>=4",
  "ubelt>=1.3.8",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
all = [
  "contextual-drag[inference,eval,analysis,magnet,dev]",
]

[project.scripts]
contextual-drag = "contextual_drag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contextual_drag = [
  "resources/inference/*.json",
  "resources/evaluation/crux/*.jsonl",
  "resources/encodings/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
