[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextual-drag"
version = "0.1.0"
description = "AIQ-magnet deliverable for the Contextual Drag research workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Contextual Drag Authors" }
]
dependencies = [
  # Upper bound on datasets — crfm-helm (a magnet dep) requires datasets~=3.1
  # and cannot accept 4.x; pin here so direct `pip install -e .` can't pick it.
  "datasets>=3.1,<4",
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2",
  "scriptconfig>=0.8.2",
  "sympy>=1.12",
  "tqdm>=4.66",
]

[project.optional-dependencies]
inference = [
  # Upper bounds matter: vllm 0.10.x was built against transformers 4.55.x and
  # torch 2.8.x. transformers 5.x removed `all_special_tokens_extended`, which
  # vllm's tokenizer initializer still calls — installing it produces a hard
  # AttributeError on engine startup. Keep these tight until vllm 0.11+ lands.
  "accelerate>=1.10,<2",
  "torch>=2.8,<2.9",
  "transformers>=4.55,<5",
  "vllm>=0.10,<0.11",
]
eval = [
  "math-verify>=0.8.0",
]
analysis = [
  "zss>=1.2.0",
  "python-Levenshtein>=0.27",
  "networkx>=3",
  "matplotlib>=3.8",
]
magnet = [
  "crfm-helm>=0.5.8",
  "dacite>=1.9.2",
  "fsspec>=2024.9",
  "h5py>=3.14",
  "kwarray>=0.7.1",
  "kwdagger>=0.2.3",
  "kwutil>=0.3.8",
  "lazy-loader>=0.4",
  "loguru>=0.7.3",
  "msgspec>=0.19",
  "numexpr>=2.11",
  "orjson>=3.10.15",
  "pygtrie>=2.5",
  "pyyaml>=6.0.2",
  "rich>=14.1",
  "ruamel-yaml>=0.17.22",
  "safer>=2.0",
  "scikit-learn>=1.7.1",
  "typing-extensions>=4",
  "ubelt>=1.3.8",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
all = [
  "contextual-drag[inference,eval,analysis,magnet,dev]",
]

[project.scripts]
contextual-drag = "contextual_drag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contextual_drag = [
  "resources/inference/*.json",
  "resources/evaluation/crux/*.jsonl",
  "resources/encodings/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
