[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80.9" ]

[project]
name = "aiq-magnet"
description = "Kitware's MAGNET framework for AIQ"
license.text = "Apache 2"
authors = [ { name = "MAGNET Kitware", email = "aiq-ta2@kitware.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "readme", "version" ]
dependencies = [
  "crfm-helm>=0.5.8",
  "dacite>=1.9.2",
  "fsspec>=2024.9",
  "h5py>=3.14",
  "kwarray>=0.7.1",
  "kwdagger>=0.2.3",
  "kwutil>=0.3.8",
  "lazy-loader>=0.4",
  "loguru>=0.7.3",
  "msgspec>=0.19",
  "numexpr>=2.11",
  "orjson>=3.10.15",
  "pandas>=2.2.3",
  "pygtrie>=2.5",
  "pyyaml>=6.0.2",
  "rich>=14.1",
  "ruamel-yaml>=0.17.22",
  "scikit-learn>=1.7.1",
  "scriptconfig>=0.8.4",
  "typing-extensions>=4",
  "ubelt>=1.3.8",
]
optional-dependencies.all = [
  "aiq-magnet[optional]",
  "aiq-magnet[tests]",
]
optional-dependencies.docs = [
  "myst-parser>=0.16.1",
  "pygments>=2.9",
  "sphinx>=4.3.2",
  "sphinx-autoapi>=1.8.4",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-reredirects>=0.0.1",
  "sphinx-rtd-theme>=1",
  "sphinxcontrib-napoleon>=0.7",
]
optional-dependencies.optional = [ "gcsfs>=2024.9", "plotly>=6.5.2" ]
optional-dependencies.tests = [
  "coverage>=7.3",
  "pytest>=8.1.1",
  "pytest-cov>=3",
  "xdoctest>=1.2",
]
urls.Homepage = "https://github.com/AIQ-Kitware/aiq-magnet/"
urls.Repository = "https://github.com/AIQ-Kitware/aiq-magnet/"
scripts.magnet = "magnet.__main__:main"
scripts.magnet-helm-run = "magnet.backends.helm.magnet_run_helm:main"
entry-points.helm.run_specs = "magnet.backends.helm.run_specs"

[tool.setuptools]
dynamic.readme.file = [
  "README.md",
]
dynamic.readme.content-type = "text/markdown"
dynamic.version.attr = "magnet.__version__"
package-data.magnet = [ "cards/*.yaml" ]
packages.find.namespaces = true
packages.find.include = [ "magnet*" ]

[tool.ruff]
target-version = "py311"
line-length = 80
format.indent-style = "space"
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false
# Enable Flake8 (E, F) and isort (I) rules.
lint.select = [ "E", "F", "I" ]
# Ignore specific rules, for example, E501 (line too long) as it's handled by the formatter.
lint.ignore = [
  "E402", # Module level import not at top of file
  "E501", # line too long
]

[tool.codespell]
skip = [ "./docs/build", "./*.egg-info", "./build", "./htmlcov" ]
count = true
quiet-level = 3
ignore-words-list = [ "wont", "cant", "ANS", "doesnt", "arent", "ans", "thats", "datas", "isnt" ]

[tool.mypy]
disable_error_code = [
  "import-untyped",
]
ignore_missing_imports = true


[tool.pytest]
ini_options.addopts = "--xdoctest --xdoctest-style=google --ignore-glob=docs"
ini_options.norecursedirs = ".git build __pycache__ dev docs dockerfiles"

[tool.coverage]
report.exclude_lines = [
  ".*  # nocover",
  ".*  # pragma: no cover",
  "pragma: no cover",
]
